add remote monitor triggers
Signed-off-by: Surya Sashank Nistala <snistala@amazon.com>